Fix version switching
* Fix Ascendancy points text being misaligned
* Fix fallback preset info loading
* Update Ascendancy release info handling
* Fix asset loading when switching versions
* Fix Ascendancy node selections when switching versions
* Fix duplicate entries in preset data

--- a/index.css
+++ b/index.css
@@ -396,6 +396,7 @@ html, body {
     display: flex;
     font-size: 1.25em;
     gap: 0.25em;
+    justify-content: center;
     left: 50%;
     margin-top: 0.5em;
     position: absolute;
